# Preproc

./: .gitignore  CMakeLists.txt  LICENSE  Macro.h.in  README.md  test.sh
.github/workflows/: cmake-multi-platform.yml
FileRaw/: CMakeLists.txt  main.c  main.h.in
Inc/: CMakeLists.txt  main.c  main.h.in
Macro/: CMakeLists.txt  main.auto.h  main.c  main.h.in
cmake/: Core.cmake  FileRaw.cmake  Inc.cmake  Macro.cmake
config/: Macro.cmake.in
inc/ae2f/: Macro.h
src/: main.c
